--- a/app/views/yhteinen/jkuAvustuskohde.html
+++ b/app/views/yhteinen/jkuAvustuskohde.html
@@ -3,32 +3,41 @@
     <div class="col-md-12">
       <h5>{{name}}</h5>
     </div>
-    <div class="col-md-6">
-      <div class="form-group" show-errors="{showSuccess: true}">
-        <label>Haettava valtionavustus
-          <input name="{{getName('haettavaavustus')}}" type="text" ng-currency="" noenter select-on-click
-                 ng-readonly="isReadonly()" class="form-control"
-                 ng-model="kohde.haettavaavustus"
-                 ui-validate="{sallittuArvoHaettavaavustus: 'sallittuArvo($value)'}"/>
-        </label>
+    <div ng-show="true">
+      <div class="col-md-6">
+        <div class="form-group" show-errors="{showSuccess: true}">
+          <label>Haettava valtionavustus
+            <input name="{{getName('haettavaavustus')}}" type="text" ng-currency="" noenter select-on-click
+                   ng-readonly="isReadonly()" class="form-control"
+                   ng-model="kohde.haettavaavustus"
+                   ui-validate="{sallittuArvoHaettavaavustus: 'sallittuArvo($value)'}"/>
+          </label>
 
-        <p class="help-block ng-invalid-sallittu-arvo-haettavaavustus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
+          <p class="help-block ng-invalid-sallittu-arvo-haettavaavustus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
 
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group" show-errors="{showSuccess: true}">
+          <label>Kunnan oma rahoitusosuus
+            <input name="{{getName('omarahoitus')}}" type="text" ng-currency="" noenter select-on-click
+                   class="form-control"
+                   ng-readonly="isReadonly()" ng-model="kohde.omarahoitus"
+                   ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kohde.haettavaavustus)',sallittuArvoOmarahoitus: 'sallittuArvo($value)'}"
+                   ui-validate-watch=" 'kohde.haettavaavustus' "/>
+          </label>
+
+          <p class="help-block ng-invalid-sallittu-arvo-omarahoitus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
+
+          <p class="help-block ng-invalid-omarahoitus-riittava">Oma rahoitusosuus tulee olla vähintään
+            {{100-avustusprosentti}}% kokonaiskuluista.</p>
+
+        </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="form-group" show-errors="{showSuccess: true}">
-        <label>Kunnan oma rahoitusosuus
-          <input name="{{getName('omarahoitus')}}" type="text" ng-currency="" noenter select-on-click class="form-control"
-                 ng-readonly="isReadonly()" ng-model="kohde.omarahoitus"
-                 ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava($value,kohde.haettavaavustus)',sallittuArvoOmarahoitus: 'sallittuArvo($value)'}"
-                 ui-validate-watch=" 'kohde.haettavaavustus' "/>
-        </label>
-
-        <p class="help-block ng-invalid-sallittu-arvo-omarahoitus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
-
-        <p class="help-block ng-invalid-omarahoitus-riittava">Oma rahoitusosuus tulee olla vähintään {{100-avustusprosentti}}% kokonaiskuluista.</p>
-
+    <div ng-hide="true">
+      <div class="col-md-12">
+        <p>Ei haettu avustusta.</p>
       </div>
     </div>
   </ng-form>
